# cqrs-architecture-with-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  install.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  start.sh
scripts/config/: last_config.sh
scripts/pre-commit/: configure.sh  run.sh  run_all.sh
src/: app.py  bootstrap.py  dependency.py  event_handler.py  exceptions.py  main.py  rest.py  schemas.py  settings.py
src/adapters/: redis_adapter.py  rest_adapter.py
src/adapters/database/: __init__.py
src/database/: __init__.py
src/domain/base/: dto.py  entity.py  event.py  model.py  value_object.py
src/domain/base/ports/: event_adapter_interface.py
src/domain/delivery/adapters/: cost_calculator_adapter.py
src/domain/delivery/ports/: cost_calculator_interface.py
src/domain/maps/: value_objects.py
src/domain/maps/adapters/: google_maps_adapter.py
src/domain/maps/ports/: maps_adapter_interface.py
src/domain/order/: entities.py  events.py  value_objects.py
src/domain/order/adapters/: kafka_publisher_adapter.py  mongo_db_connector_adapter.py  order_event_publisher_adapter.py
src/domain/order/controllers/: order_controller.py
src/domain/order/dtos/: order_dtos.py
src/domain/order/exceptions/: order_exceptions.py
src/domain/order/model/: entities.py  events.py  value_objects.py
src/domain/order/ports/: __init__.py  (+10 more)
src/domain/payment/: value_objects.py
src/domain/product/: entities.py  value_objects.py
src/ports/: cache_interface.py
(+18 files in other folders)
